--- a/DonbassMini.html
+++ b/DonbassMini.html
@@ -51,15 +51,15 @@
                     <br><br>
                     <button id="cabble" class="button-product button-complectation" style="padding: 10px 5%;">
                         <p style="text-align: start;">Удлинённый кабель питания</p>
-                        <p style="text-align: end; align-self: center;"> + $50.00</p>
+                        <p id="cabblePrice" style="text-align: end; align-self: center;"> + $50.00</p>
                     </button>
                     <br>
                     <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
                         <p style="text-align: start;">Дополнительная калибровка компрессора</p>
-                        <p style="text-align: end; align-self: center;"> + $500.00</p>
+                        <p id="compressorPrice" style="text-align: end; align-self: center;"> + $500.00</p>
                     </button>
                 </p>
-                <script src="DonbassMini.js"></script>
+                
             </div>
         </div>
         <footer>
@@ -97,10 +97,11 @@
         </footer>
         <div class="sale1">
             <div class="sale">
-                <p style="text-align: end; font-size: 120%;"><b>$1299.00 или
+                <p style="text-align: end; font-size: 120%;"><b>$<b id="priceMini">1299</b>.00 или
                 <br>$54.12/м. за 2 года</b></p>
                 <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
             </div>
         </div>
+        <script src="DonbassMini.js"></script>
     </body>
 </html>
