--- a/DonbassSE.html
+++ b/DonbassSE.html
@@ -51,15 +51,14 @@
                     <br><br>
                     <button id="fashion" class="button-product button-complectation" style="padding: 10px 5%;">
                         <p style="text-align: start;">Полочки типа Fashion</p>
-                        <p style="text-align: end; align-self: center;"> + $800.00</p>
+                        <p id="fashionPrice" style="text-align: end; align-self: center;"> + $800.00</p>
                     </button>
                     <br>
                     <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
                         <p style="text-align: start;">Дополнительная калибровка компрессора</p>
-                        <p style="text-align: end; align-self: center;"> + $500.00</p>
+                        <p id="compressorPrice" style="text-align: end; align-self: center;"> + $500.00</p>
                     </button>
                 </p>
-                <script src="DonbassSE.js"></script>
             </div>
         </div>
         <footer>
@@ -97,10 +96,11 @@
         </footer>
         <div class="sale1">
             <div class="sale">
-                <p style="text-align: end; font-size: 120%;"><b>$1499.00 или
+                <p style="text-align: end; font-size: 120%;"><b>$<b id="priceSE">1499</b>.00 или
                 <br>$62.45/м. за 2 года</b></p>
                 <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
             </div>
         </div>
+        <script src="DonbassSE.js"></script>
     </body>
 </html>
