--- a/DonbassAir.html
+++ b/DonbassAir.html
@@ -29,7 +29,6 @@
                 <p style="font-size: 100%;"><b>Кастомизируйте свой 26" дюймовый Donbass Air</b></p>
                 <p class="info">Система Air flow от компании Coal
                 <br>Материал основного корпуса: сталь
-                <br>Цвет: белый
                 <br>Уровень шума: 50 дБ
                 <br>Тип: однокамерный
                 <br>
@@ -102,7 +101,7 @@
         <div class="sale1">
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$800.00 или
-                <br>$66.6/м. за 1 года</b></p>
+                <br>$66.6/м. за 1 год</b></p>
                 <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
             </div>
         </div>
