--- a/DonbassMini.html
+++ b/DonbassMini.html
@@ -98,7 +98,7 @@
         <div class="sale1">
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$<b id="priceMini">1299</b>.00 или
-                <br>$54.12/м. за 2 года</b></p>
+                <br>$<b id="creditMini">54.12</b>/м. за 2 года</b></p>
                 <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
             </div>
         </div>
