--- a/DonbassPlus.html
+++ b/DonbassPlus.html
@@ -107,7 +107,7 @@
             <div class="sale">
                 <div>
                     <p style="text-align: end; font-size: 120%;"><b>$<b id="pricePlus">2499</b>.00 или
-                    <br>$104.12/м. за 2 года</b></p>
+                    <br>$<b id="creditPlus">104.12</b>/м. за 2 года</b></p>
                 </div>
                 <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
             </div>
