--- a/DonbassSE.html
+++ b/DonbassSE.html
@@ -97,7 +97,7 @@
         <div class="sale1">
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$<b id="priceSE">1499</b>.00 или
-                <br>$62.45/м. за 2 года</b></p>
+                <br>$<b id="creditSE">62.45</b>/м. за 2 года</b></p>
                 <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
             </div>
         </div>
