--- a/magazin.html
+++ b/magazin.html
@@ -14,9 +14,14 @@
                 <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
+                <a href="basket.html"><img class="logo" src="images/корзина.png"></a>
             </nav>
+            <nav class="navbar-under">
+                <b>Поддержка</b>
+            </nav>
+            <hr>
         </header>
-        <hr>
+
 
         <div class="main">
             <div class="Span12" style="padding: 1%; padding-left: 20%; padding-right: 20%; font-size: 80%;">
