--- a/DonbassSE.html
+++ b/DonbassSE.html
@@ -14,6 +14,7 @@
                 <a href="catalog.html" style="padding: 4px;">Товары</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
+                <a href="basket.html"><img class="logo" src="images/корзина.png"></a>
             </nav>
             <nav class="navbar-under">
                 <b>DonBass X SE</b>
