--- a/basket.html
+++ b/basket.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta charset="ASCII">
         <link rel="stylesheet" type="text/css" href="file.css">
     </head>
     <body>
@@ -11,58 +10,23 @@
                 <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px;">Товары</a>
+                <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.html"><img class="logo" src="images/корзина.png"></a>
+                <a href="director.html"><img class="logo" src="images/корзина.png"></a>
             </nav>
             <nav class="navbar-under">
-                <b>DonBass X Mini</b>
+                <b>Поддержка</b>
             </nav>
+            <hr>
         </header>
-        <hr>
 
-        <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
-            <div class="Span6" style="text-align: center;">
-                <img src="images/Холодильник21.png" style="width: 100%;">
-            </div>
-            <div class="Span6" style="padding: 5%">
-                <p style="font-size: 100%;"><b>Кастомизируйте свой 41" дюймовый Donbass X Mini</b></p>
-                <p class="info">
-                <br>Материал основного корпуса: сталь
-                <br>Цвет: белый
-                <br>Уровень шума: 40 дБ
-                <br>Тип: двухкамерный
-                <br>
-                <br>Дверца сделана по механизму - Butterfly Mechanism 
-                <br><br>
-                <hr>
-                </p>
-
-                <p class="info">
-                    <b>Coal Trade In</b>
-                    <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
-                    Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
-                    заняться переработкой устройств<br><br>
-                </p>
-                <hr>
-
-                <p class="info">
-                    <b>Комплектация:</b>
-                    <br><br>
-                    <button id="cabble" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Удлинённый кабель питания</p>
-                        <p id="cabblePrice" style="text-align: end; align-self: center;"> + $50.00</p>
-                    </button>
-                    <br>
-                    <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Дополнительная калибровка компрессора</p>
-                        <p id="compressorPrice" style="text-align: end; align-self: center;"> + $500.00</p>
-                    </button>
-                </p>
-                
+        <div class="main">
+            <div class="Span12" style="padding-left: 20%; padding-right: 20%; font-size: 50%; padding-top: 5%; padding-bottom: 5%;">
+                <h1>По всем вопросам эксплуатации или каких-либо ошибок, связанных с неправильной работой устройств, писать нам на почту mdfd.all@gmail.com</h1>
             </div>
         </div>
+
         <footer>
             <p> Стоимость обмена зависит от состояния, года выпуска и конфигурации вашего устройства, 
                 на которое распространяется действие программы обмена. Не на все устройства можно получить кредит. 
@@ -96,13 +60,5 @@
             <hr>
             <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
-        <div class="sale1">
-            <div class="sale">
-                <p style="text-align: end; font-size: 120%;"><b>$<b id="priceMini">1299</b>.00 или
-                <br>$<b id="creditMini">54.12</b>/м. за 2 года</b></p>
-                <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
-            </div>
-        </div>
-        <script src="DonbassMini.js"></script>
     </body>
 </html>
