--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a href="catalog.html" style="padding: 4px; color: white;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
                 <a href="director.html" style="padding: 4px; color: white;">Директор</a>
+                <a href="basket.html"><img class="logo" src="images/корзинаБелый.png"></a>
             </nav>
         </header>
 
