--- a/DonbassSE.html
+++ b/DonbassSE.html
@@ -27,7 +27,7 @@
                 <img src="images/DonbassSE.png" style="width: 100%;">
             </div>
             <div class="Span6" style="padding: 5%">
-                <p style="font-size: 100%;"><b>Кастомизируйте свой 57" дюймовый Donbass X SE</b></p>
+                <p style="font-size: 100%;"><b>Кастомизируйте свой 57" дюймовый Donbass SE 2</b></p>
                 <p class="info">Система Air flow от компании Coal
                 <br>Материал основного корпуса: сталь
                 <br>Цвет: белый
