--- a/basket.html
+++ b/basket.html
@@ -15,15 +15,13 @@
                 <a href="director.html" style="padding: 4px">Директор</a>
                 <a href="director.html"><img class="logo" src="images/корзина.png"></a>
             </nav>
-            <nav class="navbar-under">
-                <b>Поддержка</b>
-            </nav>
-            <hr>
         </header>
+        <hr>
 
         <div class="main">
-            <div class="Span12" style="padding-left: 20%; padding-right: 20%; font-size: 50%; padding-top: 5%; padding-bottom: 5%;">
-                <h1>По всем вопросам эксплуатации или каких-либо ошибок, связанных с неправильной работой устройств, писать нам на почту mdfd.all@gmail.com</h1>
+            <div class="Span12" style="padding-left: 18%; padding-right: 18%; font-size: 50%; padding-top: 5%; padding-bottom: 5%;">
+                <h1>Просмотрите свою корзину.</h1>
+                <p>Бесплатная доставка и возврат.</p>
             </div>
         </div>
 
