--- a/magazin.html
+++ b/magazin.html
@@ -17,7 +17,7 @@
                 <a href="basket.html"><img class="logo" src="images/корзина.png"></a>
             </nav>
             <nav class="navbar-under">
-                <b>Информаци о магазине</b>
+                <b>Информация о магазине</b>
             </nav>
             <hr>
         </header>
@@ -25,7 +25,7 @@
 
         <div class="main">
             <div class="Span12" style="padding: 1%; padding-left: 18%; padding-right: 18%; font-size: 80%;">
-                <h1>Информация о магазние Donbass</h1>
+                <h1>Информация о магазине Donbass</h1>
                 <p>Donbass – один из лидеров рынка по продаже бытовой техники в России. </p>
                 <p>Наша цель изменить жизнь людей, сделав простым доступ к огромному количеству качественных и недорогих товаров, предоставляя лучший сервис.
                     Наши клиенты – в центре всего, что мы делаем.
