--- a/DonbassAir.html
+++ b/DonbassAir.html
@@ -63,7 +63,6 @@
                     <br>
                     <button class="button-product" style="padding: 26px 42%;" id="blackAir1">Чёрный</button>
                 </p>
-                <script src="Airnode.js"></script>
             </div>
         </div>
         <footer>
@@ -103,8 +102,9 @@
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$800.00 или
                 <br>$66.6/м. за 1 год</b></p>
-                <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
+                <p style="text-align: start;"><button id="chosen" class="button button4">Выбрать</button></p>
             </div>
         </div>
+        <script src="Airnode.js"></script>
     </body>
 </html>
