--- a/DonbassAir2.html
+++ b/DonbassAir2.html
@@ -17,24 +17,23 @@
                 <a href="basket.html"><img class="logo" src="images/корзина.png"></a>
             </nav>
             <nav class="navbar-under">
-                <b>DonBass X Mini</b>
+                <b>DonBass Air</b>
             </nav>
         </header>
         <hr>
 
         <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
             <div class="Span6" style="text-align: center;">
-                <img src="images/Холодильник21.png" style="width: 100%;">
+                <img src="images/Air/air.png" style="width: 100%;" id="donbassAir2">
             </div>
             <div class="Span6" style="padding: 5%">
-                <p style="font-size: 100%;"><b>Кастомизируйте свой 41" дюймовый Donbass X Mini</b></p>
-                <p class="info">
+                <p style="font-size: 100%;"><b>Кастомизируйте свой 26" дюймовый Donbass Air</b></p>
+                <p class="info">Система Air flow от компании Coal
                 <br>Материал основного корпуса: сталь
-                <br>Цвет: белый
-                <br>Уровень шума: 40 дБ
-                <br>Тип: двухкамерный
+                <br>Уровень шума: 50 дБ
+                <br>Тип: однокамерный
                 <br>
-                <br>Дверца сделана по механизму - Butterfly Mechanism 
+                <br>Дверца сделана по механизму - TM2009
                 <br><br>
                 <hr>
                 </p>
@@ -48,19 +47,22 @@
                 <hr>
 
                 <p class="info">
-                    <b>Комплектация:</b>
+                    <b>Цвет:</b>
                     <br><br>
-                    <button id="cabble" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Удлинённый кабель питания</p>
-                        <p id="cabblePrice" style="text-align: end; align-self: center;"> + $50.00</p>
-                    </button>
+                    <button class="button-product" style="padding: 26px 44%;" id="whiteAir2">Белый</button>
                     <br>
-                    <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Дополнительная калибровка компрессора</p>
-                        <p id="compressorPrice" style="text-align: end; align-self: center;"> + $500.00</p>
-                    </button>
+                    <br>
+                    <button class="button-product" style="padding: 26px 42%;" id="pinkAir2">Розовый</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 26px 42%;" id="goldenAir2">Золотой</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 26px 42%;" id="redAir2">Product Red</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 26px 42%;" id="blackAir2">Чёрный</button>
                 </p>
-                
             </div>
         </div>
         <footer>
@@ -98,11 +100,11 @@
         </footer>
         <div class="sale1">
             <div class="sale">
-                <p style="text-align: end; font-size: 120%;"><b>$<b id="priceMini">1299</b>.00 или
-                <br>$<b id="creditMini">54.12</b>/м. за 2 года</b></p>
+                <p style="text-align: end; font-size: 120%;"><b>$1000.00 или
+                <br>$83.33/м. за 1 год</b></p>
                 <p style="text-align: start;"><button id="chosen" class="button button4">Выбрать</button></p>
             </div>
         </div>
-        <script src="DonbassMini.js"></script>
+        <script src="Airnode2.js"></script>
     </body>
 </html>
