--- a/DonbassPlus.html
+++ b/DonbassPlus.html
@@ -110,7 +110,7 @@
                     <p style="text-align: end; font-size: 120%;"><b>$<b id="pricePlus">2499</b>.00 или
                     <br>$<b id="creditPlus">104.12</b>/м. за 2 года</b></p>
                 </div>
-                <p style="text-align: start;"><button class="button button4">Выбрать</button></p>
+                <p style="text-align: start;"><button id="chosen" class="button button4">Выбрать</button></p>
             </div>
         </div>
         <script src="DonbassPlus.js"></script>
