--- a/basket.html
+++ b/basket.html
@@ -16,16 +16,17 @@
                 <a href="director.html"><img class="logo" src="images/корзина.png"></a>
             </nav>
         </header>
-        <hr>
 
-        <div class="main">
+        <div id="mainComponent" class="main">
             <div class="Span12" style="padding-left: 18%; padding-right: 18%; font-size: 50%; padding-top: 5%; padding-bottom: 5%;">
                 <h1>Просмотрите свою корзину.</h1>
                 <p>Бесплатная доставка и возврат.</p>
             </div>
+
         </div>
 
-        <footer>
+        <script src="basket.js"></script>
+        <footer style="">
             <p> Стоимость обмена зависит от состояния, года выпуска и конфигурации вашего устройства, 
                 на которое распространяется действие программы обмена. Не на все устройства можно получить кредит. 
                 Вам должно быть не менее 18 лет, чтобы получить право на обмен в обмен на кредит или подарочную карту Coal. 
