--- a/Donbass_Air.html
+++ b/Donbass_Air.html
@@ -48,7 +48,7 @@
                     </p>
                     <p><b>$1000.00</b></p>
                     <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
-                    <p><b>$91.1/м. за 1 год</b></p>
+                    <p><b>$83.33/м. за 1 год</b></p>
                     <hr>
                     <p class="info">
                         <b>Coal Trade In</b>
@@ -56,7 +56,7 @@
                         Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
                         заняться переработкой устройств<br><br>
                     </p>
-                    <a href="DonbassAir.html"><button class="button button4">Выбрать</button></a>
+                    <a href="DonbassAir2.html"><button class="button button4">Выбрать</button></a>
             </div>
 
             <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
