--- a/Donbass.html
+++ b/Donbass.html
@@ -50,13 +50,13 @@
                 <p class="info">
                     <b>Цвет:</b>
                     <br><br>
-                    <button class="button-product" style="padding: 26px 44%;" id="whiteX">Белый</button>
+                    <button class="button-product" style="padding: 8% 44%;" id="whiteX">Белый</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 43%;" id="blackX">Чёрный</button>
+                    <button class="button-product" style="padding: 8% 43%;" id="blackX">Чёрный</button>
                     <br>
                     <br>
-                    <button class="button-product" style="padding: 26px 39%;" id="spaceX">Космически чёрный</button>
+                    <button class="button-product" style="padding: 8% 39%;" id="spaceX">Космически чёрный</button>
                 </p>
             </div>
         </div>
