--- a/Donbass_X.html
+++ b/Donbass_X.html
@@ -201,6 +201,6 @@
             <hr>
             <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
-        <script src="nodes.js"></script>
+        <script src="nodesNocookies.js"></script>
     </body>
 </html>
