--- a/Donbass_Air.html
+++ b/Donbass_Air.html
@@ -34,7 +34,7 @@
                 <button class="button-color" style="background-color: rgb(203, 176, 118);" id="goldenAir1"></button>
                 <button class="button-color" style="background-color: red;" id="redAir1"></button>
                 <button class="button-color" style="background-color: black;" id="blackAir1"></button>
-                <script src="Airnode.js"></script>
+                <script src="AirnodeNoCookies.js"></script>
                 <p>
                     <b>DonBass Air</b><br><br>
                     <b>120V<br>
@@ -66,7 +66,7 @@
                 <button class="button-color" style="background-color: rgb(203, 176, 118);" id="goldenAir2"></button>
                 <button class="button-color" style="background-color: red;" id="redAir2"></button>
                 <button class="button-color" style="background-color: black;" id="blackAir2"></button>
-                <script src="Airnode2.js"></script>
+                <script src="Airnode2NoCookies.js"></script>
                 <p>
                     <b>DonBass Air</b><br><br>
                     <b>100V<br>
