--- a/Donbass.html
+++ b/Donbass.html
@@ -97,7 +97,7 @@
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$1999.00 или
                 <br>$91.6/м. за 2 года</b></p>
-                <p style="text-align: start;"><button id="chosen" class="button button4">Выбрать</button></p>
+                <p style="text-align: start;"><a href="great_basket.html"><button id="chosen" class="button button4">Выбрать</button></a></p>
             </div>
         </div>
     </body>
