--- a/DonbassAir2.html
+++ b/DonbassAir2.html
@@ -102,7 +102,7 @@
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$1000.00 или
                 <br>$83.33/м. за 1 год</b></p>
-                <p style="text-align: start;"><button id="chosen" class="button button4">Выбрать</button></p>
+                <p style="text-align: start;"><a href="great_basket.html"><button id="chosen" class="button button4">Выбрать</button></a></p>
             </div>
         </div>
         <script src="Airnode2.js"></script>
