--- a/DonbassMini.html
+++ b/DonbassMini.html
@@ -100,7 +100,7 @@
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$<b id="priceMini">1299</b>.00 или
                 <br>$<b id="creditMini">54.12</b>/м. за 2 года</b></p>
-                <p style="text-align: start;"><button id="chosen" class="button button4">Выбрать</button></p>
+                <p style="text-align: start;"><a href="great_basket.html"><button id="chosen" class="button button4">Выбрать</button></a></p>
             </div>
         </div>
         <script src="DonbassMini.js"></script>
