--- a/DonbassSE.html
+++ b/DonbassSE.html
@@ -99,7 +99,7 @@
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$<b id="priceSE">1499</b>.00 или
                 <br>$<b id="creditSE">62.45</b>/м. за 2 года</b></p>
-                <p style="text-align: start;"><button id="chosen" class="button button4">Выбрать</button></p>
+                <p style="text-align: start;"><a href="great_basket.html"><button id="chosen" class="button button4">Выбрать</button></a></p>
             </div>
         </div>
         <script src="DonbassSE.js"></script>
