--- a/DonbassMini.html
+++ b/DonbassMini.html
@@ -15,6 +15,7 @@
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
                 <a href="basket.html"><img class="logo" src="images/корзина.png"></a>
+                <a href="account.html"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
             </nav>
             <nav class="navbar-under">
                 <b>DonBass X Mini</b>
