--- a/director.html
+++ b/director.html
@@ -15,6 +15,7 @@
                 <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
                 <a href="director.html" style="padding: 4px; color: white;">Директор</a>
                 <a href="basket.html"><img class="logo" src="images/корзинаБелый.png"></a>
+                <a href="account.html"><img style="width: 3wh; height: 3vh;" src="images/user-profile-white.png"></a>
             </nav>
         </header>
         <div class="main" style="padding: 10%;">
