--- a/DonbassPR.html
+++ b/DonbassPR.html
@@ -14,8 +14,8 @@
                 <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.html"><img class="logo" src="images/корзина.png"></a>
-                <a href="account.html"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
+                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
+                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
             </nav>
             <nav class="navbar-under">
                 <b>DonBass X</b>
@@ -91,7 +91,7 @@
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$1999.00 или
                 <br>$91.6/м. за 2 года</b></p>
-                <p style="text-align: start;"><a href="great_basket.html"><button id="chosen" class="button button4">Выбрать</button></a></p>
+                <p style="text-align: start;"><a href="great_basket.php"><button id="chosen" class="button button4">Выбрать</button></a></p>
             </div>
         </div>
     </body>
