--- a/magazin.html
+++ b/magazin.html
@@ -14,7 +14,7 @@
                 <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.html"><img class="logo" src="images/корзина.png"></a>
+                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
                 <a href="account.html"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
             </nav>
             <nav class="navbar-under">
